Add RMI base config